--- a/config/tomcat.yml
+++ b/config/tomcat.yml
@@ -21,7 +21,7 @@ tomcat:
 lifecycle_support:
   version: 2.+
   repository_root: "{default.repository.root}/tomcat-lifecycle-support"
-jar_support:
+shared_lib_jars_support:
   version: 2.+
   repository_root: "{aws.repository.root}/covisint.com-shared-libs"
 logging_support:
