--- a/config/components.yml
+++ b/config/components.yml
@@ -24,7 +24,7 @@ containers:
   - "JavaBuildpack::Container::SpringBoot"
   - "JavaBuildpack::Container::SpringBootCLI"
   - "JavaBuildpack::Container::Tomcat"
-  - "JavaBuildpack::Container::YamlParser"
+  #- "JavaBuildpack::Container::YamlParser"
 
 # In order to use Oracle JREs instead of OpenJDK, you must comment out the OpenJDK line and uncomment the Oracle line.
 # Please see the documentation for more detail.
